tests/error/ptr_from_const.gw
1 :=> <~int~>Ptr i;
